# openCV_learn

./: README.md
1_Display/: CMakeLists.txt  display  display.cpp
2_Mouse/: CMakeLists.txt  make_CMakeLists  mouse  mouse.cpp
3_Trackbar/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  trackbar  trackbar.cpp
4_Draw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  draw  draw.cpp
5_ColorReduce/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_reduce  color_reduce.cpp
6_Split/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  split  split.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
